<resources>
    <string name="app_name">HelpDesk Application</string>
    <string name="app_login_title">Help Desk</string>
    <string name="str_home">Home</string>
    <string name="str_info">Your Tickets</string>
    <string name="str_report">Report</string>
    <string name="str_faq">FAQ</string>
    <string name="str_id">ID:</string>
    <string name="login_buton">Login</string>
    <string name="str_error">Error</string>
    <string name="str_success">Success</string>
    <string name="str_ok">OK</string>
    <string name="home_title1">Quality over cost</string>
    <string name="home_description1">Quality maintenance cost is a sustainable approach</string>
    <string name="home_title2">Fast. Fresh. Convenient</string>
    <string name="home_description2">Give us the honour to serve you</string>
    <string name="home_title3">Communicate with tomorrow</string>
    <string name="home_description3">Work as a team to help your customers get all the answers</string>
    <string name="ticket_row_title">Ticket Title:</string>
    <string name="submit_title">Title:</string>
    <string name="submit_place">Place:</string>
    <string name="submit_yourproblem">Your problem:</string>
    <string name="submit_choose_a_file">Choose a file</string>
    <string name="submit_send">Send</string>
    <string name="ticket_row_status">Status:</string>
    <string name="ticket_comment_toast">Please enter your content!</string>
    <string name="loading">Please Wait...</string>
    <string name="str_start">Start Date:</string>
    <string name="str_end">End Date:</string>
    <string name="str_assigned">Assigned:</string>
    <string name="str_basic">Basic Information</string>
    <string name="str_nhap">Type here</string>
    <string name="str_comment">Comment</string>
    <string name="str_close">Close</string>
    <string name="str_warning">You can not undo!</string>
    <string name="account">Technicians</string>
    <string name="assign">Assign</string>
    <string name="assignfor">Assign</string>
    <string name="acc_fullname">Full Name</string>
    <string name="acc_email">Email</string>
    <string name="acc_username">Username</string>
    <string name="acc_pass">Password</string>
    <string name="acc_confirm">Confirm</string>
    <string name="row_id">ID:</string>
    <string name="row_hoten">Full Name:</string>
    <string name="row_username">Username:</string>
    <string name="row_email">Email:</string>
    <string name="addACC">Add A Technician</string>
    <string name="add">Add</string>
    <string name="toast1">Please enter all fields!</string>
    <string name="toast2">Password confirmation is not correct!</string>
</resources>