<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAddAccount">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="-4dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
           android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acc_fullname"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/text_fullname_acc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/acc_email"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/text_email_acc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/acc_username"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/text_username_acc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/acc_pass"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/text_pass_acc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/acc_confirm"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/text_confirm_acc"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>

            <Button

                android:id="@+id/btnAddUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_assign"
                android:text="@string/add"
                android:textColor="#000"></Button>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>