<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketDetail"
    android:background="@drawable/background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#B7D8D6D6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:textColor="#FA2525"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_basic"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <View
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_id"
                        android:textColor="#000"
                        android:textSize="20dp"></TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:paddingStart="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/submit_title"
                        android:textColor="#000"
                        android:textSize="20dp"></TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:paddingStart="10dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_start"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:layout_gravity="center"
                        android:paddingStart="5dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_end"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:paddingStart="5dp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_assigned"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_assigned"
                        android:paddingStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_row_status"
                        android:textColor="#000"
                        android:textSize="20dp"></TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_status"
                        android:paddingStart="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit_place"
                        android:textSize="20dp">
                    </TextView>
                    <TextView
                        android:textColor="#000"
                        android:id="@+id/detail_place"
                        android:layout_width="match_parent"
                        android:paddingStart="5dp"
                        android:layout_height="match_parent"
                        android:textSize="20sp">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/list_comment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff">
        </ListView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="10"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <EditText
                android:textColor="#000"
                android:id="@+id/txtInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:padding="10dp"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/str_nhap"
                android:background="#fff">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="7">
            <Button
                android:id="@+id/btnComment"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:text="@string/str_comment"
                android:background="@drawable/button_comment"
                android:textColor="#fff"
                android:layout_marginRight="5dp">
            </Button>
            <Button
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:id="@+id/btnCloseTicket"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/str_close"
                android:background="@drawable/button_close"
                android:textColor="#fff">
            </Button>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>