<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="-4dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_title"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit_place"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/txtPlace"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/submit_yourproblem"
                android:textColor="#fff"
                android:textSize="15dp"></TextView>

            <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"></EditText>

            <!--        <TextView-->
            <!--            android:id="@+id/textView2"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="20dp"-->
            <!--            android:text="Choose a file"-->
            <!--            android:textSize="15dp"-->
            <!--            android:textColor="#fff"></TextView>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="235dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnChooseFile"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/edit"
                    android:padding="5dp"
                    android:text="@string/submit_choose_a_file"></Button>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="167dp"
                    android:background="@drawable/edit"
                    android:textColor="#fff"></ImageView>

            </LinearLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/submit_send"
                android:textColor="#000"></Button>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>